--- a/main.html
+++ b/main.html
@@ -13,7 +13,28 @@
     <div class="main-container">
         <!-- header section -->
         <header>
-            <!--Navigation menu code will come here -->
+            <!-- We can also insert any logo here -->
+            <div class="logo">
+                <h2 class="logo">Ma<span>nan</span></h2>
+            </div>
+
+            <!-- checkbox to control icon's state-->
+            <input id="menu-toggle" type="checkbox" />
+            <label class="menu-button-container" for="menu-toggle">
+                <div class="menu-button"></div>
+            </label>
+
+            <!-- Main Menu-->
+
+            <ul class="menu">
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#blogs">blogs</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </header>
         <!-- header section end-->
 
@@ -52,7 +73,7 @@
         </div>
         <!-- Blog section ends-->
 
-        
+
         <!-- Contact us section starts-->
         <section class="contact" id="contact">
             <!-- Contact us section-->
@@ -61,7 +82,7 @@
 
         <!-- Footer-->
         <section id="lab_social_icon_footer">
-            
+
         </section>
     </div>
 </body>
