updated Hero section

--- a/main.html
+++ b/main.html
@@ -13,35 +13,50 @@
     <div class="main-container">
         <!-- header section -->
         <header>
-            <!-- We can also insert any logo here -->
-            <div class="logo">
-                <h2 class="logo">Ma<span>nan</span></h2>
-            </div>
 
-            <!-- checkbox to control icon's state-->
-            <input id="menu-toggle" type="checkbox" />
-            <label class="menu-button-container" for="menu-toggle">
-                <div class="menu-button"></div>
-            </label>
+            <section class="nav">
+                <!-- We can also insert any logo here -->
 
-            <!-- Main Menu-->
+                <div class="logo">
+                    <h2 class="logo">Ma<span>nan</span></h2>
+                </div>
 
-            <ul class="menu">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#blogs">blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+                <!-- checkbox to control icon's state-->
+                <input id="menu-toggle" type="checkbox" />
+                <label class="menu-button-container" for="menu-toggle">
+                    <div class="menu-button"></div>
+                </label>
+
+                <!-- Main Menu-->
+
+                <ul class="menu">
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#blogs">blogs</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </section>
         </header>
         <!-- header section end-->
 
 
         <!-- Hero section starts-->
         <section class="hero" id="hero">
-            <!-- This will contain a brief description of us -->
+            <div class="herocontent">
+                <h4>Hello, Nice to see you! I'm</h4>
+                <h1>M<span class="surname">a</span>n<span>a</span>n A<span>r</span>or<span>a</span></h1>
+                <h2><span class="span2">Software</span><span class="span2"> Developer</span></h2>
+
+                <button class="btn1">Hire Me</button>
+                <button class="btn2">Resume  <i class="bi bi-download"></i></button>
+            </div>
+
+            <div class="image">
+                <img src="Hero-image.jpg" alt=" " height="100" width="70">
+            </div>
         </section>
         <!-- Hero section end-->
 
