--- a/main.html
+++ b/main.html
@@ -51,11 +51,11 @@
                 <h2><span class="span2">Software</span><span class="span2"> Developer</span></h2>
 
                 <button class="btn1">Hire Me</button>
-                <button class="btn2">Resume  <i class="bi bi-download"></i></button>
+                <button class="btn2">Resume <i class="bi bi-download"></i></button>
             </div>
 
             <div class="image">
-                <img src="Hero-image.jpg" alt=" " height="100" width="70">
+                <img src="Hero-image.jpg" alt=" " height="200" width="300">
             </div>
         </section>
         <!-- Hero section end-->
@@ -63,16 +63,138 @@
 
         <!-- About section starts -->
         <section class="about" id="about">
-            <!-- This will contain a summary of us -->
+            <div class="main">
+                <img src="" alt="About IMG - Professional">
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <h5>Software Developer</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, minus fugit! In tenetur
+                        veritatis quia illo. Hic voluptates nostrum consectetur rem maiores. Numquam distinctio nesciunt
+                        architecto saepe ipsum ducimus expedita!</p>
+                    <button type="button">Let's Talk</button>
+                </div>
+            </div>
         </section>
         <!-- About section end -->
 
 
         <!-- Skills section start -->
         <section class="skills" id="skills">
-            <!--This will contain all the key skills we possess-->
+            <div class="max-width">
+                <h2 class="title">Key Skills</h2>
+                <div class="skills-content">
+                    <div class="column right">
+                        <div class="bars">
+                            <div class="info">
+                                <span class="headbar">HTML5, CSS3, Bootstrap</span>
+                            </div>
+
+                            <div class="progressBar">
+                                <div class="line mern"></div>
+                            </div>
+                        </div>
+
+                        <div class="bars">
+                            <div class="info">
+                                <span class="headbar">Javascript(ES6)</span>
+                            </div>
+
+                            <div class="progressBar">
+                                <div class="line js"></div>
+                            </div>
+                        </div>
+
+                        <div class="bars">
+                            <div class="info">
+                                <span class="headbar">Java</span>
+                            </div>
+
+                            <div class="progressBar">
+                                <div class="line java"></div>
+                            </div>
+                        </div>
+
+                        <div class="bars">
+                            <div class="info">
+                                <span class="headbar">Python</span>
+                            </div>
+
+                            <div class="progressBar">
+                                <div class="line py"></div>
+                            </div>
+                        </div>
+
+                        <div class="bars">
+                            <div class="info">
+                                <span class="headbar">Android App Development</span>
+                            </div>
+
+                            <div class="progressBar">
+                                <div class="line android"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Skills section end-->
+
+        <!--Projects section start-->
+
+        <div class="service" id="projects">
+            <div class="title">
+                <h2 class="project-heading">Projects</h2>
+            </div>
+
+            <div class="box">
+                <div class="card">
+                    <h5>Image Captioning (Deep Learning)</h5>
+                    <div class="pra">
+                        <p>Developed and deployed a deep learning model using the InceptionV3 architecture that
+                            generates captions for an input image, achieving an average BLEU score of 0.66</p>
+                        <p style="text-align: center;">
+                            <a class="button" href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h5>Vehicle Analyzer (Deep Learning)</h5>
+                    <div class="pra">
+                        <p>Designed a deep learning model to track the movement of the vehicles in the video frames
+                            using background subtraction methods, surpassing the accuracy of conventional virtual
+                            detector</p>
+                        <p style="text-align: center;">
+                            <a class="button" href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h5>Shopping Bucket (Android Studio)</h5>
+                    <div class="pra">
+                        <p>Designed and developed an Android application for customizing shopping lists, including key
+                            features like login, registration, and making real-time updates to the list’s data using
+                            firebase</p>
+                        <p style="text-align: center;">
+                            <a class="button" href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h5>Weather App (Android Studio)</h5>
+                    <div class="pra">
+                        <p>Developed a single-page application that displays the user's current temperature, weather
+                            status, and additional weather details. Leveraged the openweathermap.org API to retrieve
+                            weather information.</p>
+                        <p style="text-align: center;">
+                            <a class="button" href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
         <!-- Experience section start-->
