--- a/main.html
+++ b/main.html
@@ -199,8 +199,50 @@
 
         <!-- Experience section start-->
         <section class="CV-page" id="experience">
-            <!-- This section will include professional experience -->
+            <div class="CV-grid">
+                <div class="CV-jobs">
+                    <h2 class="CV-secondaryHeading CV-jobs-heading">Relevant Experience</h2>
+                    <section class="CV-timeline CV-job">
+
+                        <!-- Experience 1-->
+                        <h3 class="CV-timeline-heading"><span class="CV-timeline-heading-title">Application Development
+                                Associate</span> &#8211; <span class="CV-timeline-heading-location">Accenture, India
+                            </span> <small class="CV-timeline-heading-duration"> September 2021 - June 2023</small>
+                        </h3>
+                        <ul class="CV-timeline-details">
+                            <li>Collaborated as a functional lead with three teams for an enhancement ChaRM to deliver a
+                                high priority change for a fortune 500 mining client</li>
+                            <li>Designed knowledge base to enhance the team’s understanding of PAOM module in SAP Human
+                                Capital Management thus streamlining the onboarding process for new recruits</li>
+                            <li>Acted as a functional lead in spearheading the SAP HRSP Refresh for 3 quarters from PAOM
+                                module</li>
+                        </ul>
+                    </section>
+
+                    <section class="CV-timeline CV-job">
+                        <!-- Experience 2-->
+                        <h3 class="CV-timeline-heading"><span class="CV-timeline-heading-title">Android Developer
+                                Intern</span> &#8211; <span class="CV-timeline-heading-location">Ezyschooling,
+                                India</span> <small class="CV-timeline-heading-duration">May 2020 - June 2020</small>
+                        </h3>
+
+                        <ul class="CV-timeline-details">
+                            <li>Collaborated with a team of 2 and designed User Interface elements of the parenting
+                                section in the android application</li>
+                            <li>Fetched articles, discussions, users’ data from APIs to the fronted of the application
+                                with Retrofit, type-safe REST client for Android</li>
+                            <li>Designed and developed single pages like ‘about us’ and ‘contact us’ in the application
+                            </li>
+                            <li>Instituted face recognition and mask detection model to recognize masked faces;
+                                integrated it within the user interface of the
+                                attendance management application</li>
+                        </ul>
+                    </section>
+
+                </div>
+            </div>
         </section>
+
         <!-- Experience section end-->
 
 
