--- a/main.html
+++ b/main.html
@@ -246,11 +246,30 @@
         <!-- Experience section end-->
 
 
-        <!-- Blog section start-->
-        <div class="service" id="blogs">
-            <!-- This section will include published blog posts.-->
+        <!-- Publication and Certification section start-->
+        <div class="service" id="Certi">
+           <div class="title">
+                <h2 class="project-heading">Publication and Certification</h2>
+           </div>
+
+           <div class="box">
+                <div class="card">
+                    <i class="fas fa-bars"></i> 
+                    <h5>Vehicle Analysis Techniques</h5>
+                    <div class="pra">
+                        <p>Published research paper titled “Vehicle Analysis Techniques” in IJSREM (Volume: 05 Issue: 01 – 2021)</p>
+                        <p style="text-align: center;">
+                            <a class="button" href="#">Read More</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <i class="fas fa-bars"></i>
+                </div>
+           </div>
         </div>
-        <!-- Blog section ends-->
+        <!-- Publication and Certification section ends-->
 
 
         <!-- Contact us section starts-->
