--- a/main.html
+++ b/main.html
@@ -266,6 +266,42 @@
 
                 <div class="card">
                     <i class="fas fa-bars"></i>
+                    <h5>Image Captioning Techniques</h5>
+                    <div class="pra"></div>
+                    <p>Published research paper titled “Image Captioning Techniques” in IJSREM (Volume: 05 Issue: 06 – 2021)</p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas-fa-bars"></i>
+                    <h5>Java Programming</h5>
+                    <div class="pra"></div>
+                    <p>Core Java certification from Coding Blocks (2018)</p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas-fa-bars"></i>
+                    <h5>Modern Web Development using ReactJS</h5>
+                    <div class="pra"></div>
+                    <p>3 week industrial training on JavaScript and ReactJS by Brain Mentors pvt ltd (2019)</p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+                <div class="card">
+                    <i class="fas-fa-bars"></i>
+                    <h5>Android App Development</h5>
+                    <div class="pra"></div>
+                    <p>Android App Development training and certification from Coding Blocks during industrial training semester (2020)</p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
                 </div>
            </div>
         </div>
