Updated contact me page

--- a/main.html
+++ b/main.html
@@ -310,7 +310,19 @@
 
         <!-- Contact us section starts-->
         <section class="contact" id="contact">
-            <!-- Contact us section-->
+            <h2 class="contactTitle">Contact Me</h2>
+            <div class="container ContactUs">
+                <div class="contact-box">
+                    <img src="contact-me.jpg" class="contact-img" alt="" width="150px"></img>
+
+                    <div class="contact-info">
+                        <p><i class="bi bi-telephone-fill"></i> +91 9013283945</p>
+                        <p><i class="bi bi-envelope-fill"></i> mananarora313@gmail.com</p>
+                        <p><i class="bi bi-geo-alt-fill"></i>Arlington, TX - USA</p>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
 
