--- a/main.html
+++ b/main.html
@@ -248,16 +248,17 @@
 
         <!-- Publication and Certification section start-->
         <div class="service" id="Certi">
-           <div class="title">
+            <div class="title">
                 <h2 class="project-heading">Publication and Certification</h2>
-           </div>
+            </div>
 
-           <div class="box">
+            <div class="box">
                 <div class="card">
-                    <i class="fas fa-bars"></i> 
+                    <i class="fas fa-bars"></i>
                     <h5>Vehicle Analysis Techniques</h5>
                     <div class="pra">
-                        <p>Published research paper titled “Vehicle Analysis Techniques” in IJSREM (Volume: 05 Issue: 01 – 2021)</p>
+                        <p>Published research paper titled “Vehicle Analysis Techniques” in IJSREM (Volume: 05 Issue: 01
+                            – 2021)</p>
                         <p style="text-align: center;">
                             <a class="button" href="#">Read More</a>
                         </p>
@@ -268,7 +269,8 @@
                     <i class="fas fa-bars"></i>
                     <h5>Image Captioning Techniques</h5>
                     <div class="pra"></div>
-                    <p>Published research paper titled “Image Captioning Techniques” in IJSREM (Volume: 05 Issue: 06 – 2021)</p>
+                    <p>Published research paper titled “Image Captioning Techniques” in IJSREM (Volume: 05 Issue: 06 –
+                        2021)</p>
                     <p style="text-align: center;">
                         <a class="button" href="#">Read More</a>
                     </p>
@@ -298,12 +300,13 @@
                     <i class="fas-fa-bars"></i>
                     <h5>Android App Development</h5>
                     <div class="pra"></div>
-                    <p>Android App Development training and certification from Coding Blocks during industrial training semester (2020)</p>
+                    <p>Android App Development training and certification from Coding Blocks during industrial training
+                        semester (2020)</p>
                     <p style="text-align: center;">
                         <a class="button" href="#">Read More</a>
                     </p>
                 </div>
-           </div>
+            </div>
         </div>
         <!-- Publication and Certification section ends-->
 
@@ -313,15 +316,32 @@
             <h2 class="contactTitle">Contact Me</h2>
             <div class="container ContactUs">
                 <div class="contact-box">
-                    <img src="contact-me.jpg" class="contact-img" alt="" width="150px"></img>
+                    <div class="left contactLeft">
+                        <img src="contact-me.jpg" class="contact-img" alt="" width="150px"></img>
 
-                    <div class="contact-info">
-                        <p><i class="bi bi-telephone-fill"></i> +91 9013283945</p>
-                        <p><i class="bi bi-envelope-fill"></i> mananarora313@gmail.com</p>
-                        <p><i class="bi bi-geo-alt-fill"></i>Arlington, TX - USA</p>
+                        <div class="contact-info">
+                            <p><i class="bi bi-telephone-fill"></i> +91 9013283945</p>
+                            <p><i class="bi bi-envelope-fill"></i> mananarora313@gmail.com</p>
+                            <p><i class="bi bi-geo-alt-fill"></i>Arlington, TX - USA</p>
+                        </div>
+
+                        <p class="contact-content"> If you have any queries at all, please feel free to reach out and
+                            I'll gladly answer them.</p>
+                        <p class="contact-content"> Thanks for visiting </p>
+                    </div>
+
+                    <div class="right contactRight">
+                        <h2 class="contacth2"> Let's Connect</h2>
+                        <form>
+                            <input type="text" class="field contactField" placeholder="Enter your Full Name" required />
+                            <input type="email" class="field contactField" placeholder="Enter your Email" required />
+                            <input type="text" class="field contactField" placeholder="Enter your Phone Number" />
+                            <textarea name="msg" placeholder="Suggestion/Queries"
+                                class="field contactField contactTextarea" required></textarea>
+                            <button class="btn contactBtn" type="submit">Send</button>
+                        </form>
                     </div>
                 </div>
-
             </div>
         </section>
 
