Footer section - Update

--- a/main.html
+++ b/main.html
@@ -345,10 +345,17 @@
             </div>
         </section>
 
-
+        <br>
         <!-- Footer-->
         <section id="lab_social_icon_footer">
+            <div class="container">
+                <a href=""><i class="bi bi-github social"></i></a>
+                <a href=""><i class="bi bi-linkedin social"></i></a>
+                <a href=""><i class="bi bi-whatsapp social"></i></a>
+                <a href="mailto:mananarora313@gmail.com"><i class="bi bi-envelope social"></i></a>
 
+                <p class="footertext">© @MananArora</p>
+            </div>
         </section>
     </div>
 </body>
