--- a/main.html
+++ b/main.html
@@ -4,8 +4,7 @@
 <head>
     <title>Document</title>
     <!-- Include this CDN for using icons -->
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
