updated Styles.css for about me section

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Manan Arora</title>
     <!-- Include this CDN for using icons -->
     <link rel="stylesheet" href="styles.css">
 
