--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Manan Arora</title>
     <!-- Include this CDN for using icons -->
     <link rel="stylesheet" href="styles.css">
-
+    
 </head>
 
 <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="main-container">
         <!-- header section -->
         <header>
