--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Manan Arora</title>
     <!-- Include this CDN for using icons -->
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 
 <body>
@@ -46,9 +46,11 @@
         <!-- Hero section starts-->
         <section class="hero" id="hero">
             <div class="herocontent">
-                <h4>Hello, Nice to see you! I'm</h4>
-                <h1>M<span class="surname">a</span>n<span>a</span>n A<span>r</span>or<span>a</span></h1>
-                <h2><span class="span2">Software</span><span class="span2"> Developer</span></h2>
+                <h4>Hi There!
+                    <span class="wave" role="img" aria-labelledby="wave">👋</span>
+                </h4>
+                <h2>I'm <span class="surname">MANAN ARORA</span></h2>
+                <h3><span class="span2">Software</span><span class="span2"> Developer</span></h3>
 
                 <button class="btn1">Hire Me</button>
                 <button class="btn2">Resume <i class="bi bi-download"></i></button>
