--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
                 <h3><span class="span2">Software</span><span class="span2"> Developer</span></h3>
 
                 <button class="btn1">Hire Me</button>
-                <button class="btn2">Resume <i class="bi bi-download"></i></button>
+                <button class="btn2">Resume
+                    <i class="bi bi-download"></i>
+
+                </button>
             </div>
 
             <div class="image">
-                <img src="Hero-image.jpg" alt=" " height="200" width="300">
+                <img src="images/hero-image.jpg" alt=" " height="400" width="600">
             </div>
         </section>
         <!-- Hero section end-->
@@ -66,7 +69,7 @@
         <!-- About section starts -->
         <section class="about" id="about">
             <div class="main">
-                <img src="" alt="About IMG - Professional">
+                <img src="images/about-me.jpg" alt="About IMG - Professional">
                 <div class="about-text">
                     <h2>About Me</h2>
                     <h5>Software Developer</h5>
@@ -325,7 +328,7 @@
             <div class="container ContactUs">
                 <div class="contact-box">
                     <div class="left contactLeft">
-                        <img src="contact-me.jpg" class="contact-img" alt="" width="150px"></img>
+                        <img src="images/contact-me.jpg" class="contact-img" alt="" width="150px"></img>
 
                         <div class="contact-info">
                             <p><i class="bi bi-telephone-fill"></i> +91 9013283945</p>
