--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <!-- Hero section starts-->
         <section class="hero" id="hero">
             <div class="herocontent">
-                <h4>Hi There!
-                    <span class="wave" role="img" aria-labelledby="wave">👋</span>
+                <h4>Hi There!<span class="wave" role="img" aria-labelledby="wave"><h3>👋</h3></span>
                 </h4>
                 <h2>I'm <span class="surname">MANAN ARORA</span></h2>
                 <h3><span class="span2">Software</span><span class="span2"> Developer</span></h3>
