Fixed Responsive bug for Hero img

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="image">
-                <img src="images/hero-image.jpg" alt=" " height="400" width="600">
+                <img src="images/hero-image.jpg" alt=" " height="auto" width="100%">
             </div>
         </section>
         <!-- Hero section end-->
@@ -68,7 +68,7 @@
         <!-- About section starts -->
         <section class="about" id="about">
             <div class="main">
-                <img src="images/about-me.jpg" alt="About IMG - Professional">
+                <img src="images/about-me.jpg" alt="About IMG - Professional" max-height="30%" width="30%">
                 <div class="about-text">
                     <h2>About Me</h2>
                     <h5>Software Developer</h5>
