--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <!-- Hero section starts-->
         <section class="hero" id="hero">
             <div class="herocontent">
-                <h4>Hi There!<span class="wave" role="img" aria-labelledby="wave"><h3>👋</h3></span>
+                <h4>Hi There!<span class="wave" role="img" aria-labelledby="wave">
+                        <h3>👋</h3>
+                    </span>
                 </h4>
                 <h2>I'm <span class="surname">MANAN ARORA</span></h2>
                 <h3><span class="span2">Software</span><span class="span2"> Developer</span></h3>
@@ -68,7 +70,7 @@
         <!-- About section starts -->
         <section class="about" id="about">
             <div class="main">
-                <img src="images/about-me.jpg" alt="About IMG - Professional" max-height="30%" width="30%">
+                <img src="images/about-me.jpg" alt="About IMG - Professional">
                 <div class="about-text">
                     <h2>About Me</h2>
                     <h5>Software Developer</h5>
