--- a/index.html
+++ b/index.html
@@ -69,14 +69,24 @@
 
         <!-- About section starts -->
         <section class="about" id="about">
+
+
             <div class="main">
+                <!-- <img src="images/about-me.jpg" alt="About IMG - Professional"> -->
+
                 <img src="images/about-me.jpg" alt="About IMG - Professional">
+
                 <div class="about-text">
                     <h2>About Me</h2>
                     <h5>Software Developer</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, minus fugit! In tenetur
-                        veritatis quia illo. Hic voluptates nostrum consectetur rem maiores. Numquam distinctio nesciunt
-                        architecto saepe ipsum ducimus expedita!</p>
+                    <p>I'm a Computer Science enthusiast currently pursuing my Master's in Computer Science
+                        at UT Arlington. I'm a quick learner and collaborate closely with clients to create efficient, scalable, and user-friendly
+                        solutions that solve real-world problems. Explore my
+                        portfolio to see how I can bring innovation to your projects!
+                        <br>
+                        <br>
+
+                    </p>
                     <button type="button">Let's Talk</button>
                 </div>
             </div>
