updated index.html with grammar mistakes

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
               <br />
               <li>
                 🚀 My journey into the tech world started during my undergrad
-                days, where my love for coding blossomed. Now, I'm diving deeper
+                days when my love for coding blossomed. Now, I'm diving deeper
                 into the realm of Computer Science to hone my skills and
                 knowledge 🔍
               </li>
               <br />
               <li>
-                🌟 I'm open for a Summer and Fall 24 internships that offers the
+                🌟 I'm open for Summer and Fall 24 internships that offer the
                 perfect blend of learning and growth. Tech companies and
                 startups, I'm ready to bring my passion and skills to the table!
                 🎯
@@ -308,7 +308,7 @@
 
             <p class="section-text">
               I am an avid learner and am fond of learning different
-              technologies including
+              technologies including,
               <strong>Web Developement</strong>,
               <strong>Android Development</strong>,
               <strong>Machine Learning</strong>, and
@@ -837,7 +837,7 @@
             <h2 class="h3 section-title">Feel free to send me a message</h2>
 
             <p class="section-text">
-              You can reach out to me on LinkedIn or send me an email and I'll
+              You can reach out to me on LinkedIn or send me an email, and I'll
               be in touch as soon as possible!
             </p>
 
