updated index with mobile number

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 <div class="wrapper">
                   <h3 class="h4 contact-item-title">Phone:</h3>
 
-                  <a href="tel:01234567789" class="contact-info"
+                  <a href="tel:+1 6823744294" class="contact-info"
                     >(+1) 682-374-4294</a
                   >
                 </div>
