updated index with address

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
                   <h3 class="h4 contact-item-title">Address:</h3>
 
                   <address class="contact-info">
-                    404 East Border Street, Arlington, Texas 76010
+                    Arlington, Texas 76010
                   </address>
                 </div>
               </li>
