--- a/index.html
+++ b/index.html
@@ -216,10 +216,9 @@
               </li>
               <br />
               <li>
-                🌟 I'm open for Summer and Fall 24 internships that offer the
-                perfect blend of learning and growth. Tech companies and
-                startups, I'm ready to bring my passion and skills to the table!
-                🎯
+                🌟 I'm open for Fall 24 internships that offer the perfect blend
+                of learning and growth. Tech companies and startups, I'm ready
+                to bring my passion and skills to the table! 🎯
               </li>
               <br />
               <li>
@@ -248,47 +247,101 @@
             <p class="section-subtitle">Experience</p>
             <div>
               <h2 class="h3 experience-title">
-                Application Development Associate,
-                <font color="#E38444">Accenture</font>
+                Software Engineering Intern,
+                <font color="#E38444">Resi Media</font>
               </h2>
-
               <ul class="section-text">
                 <li>
-                  • Led the initiative to revamp landing pages, implementing
-                  responsive design for a Fortune 500 mining client, thus
-                  reducing reported bugs by 50%; instrumental in achieving a 20%
-                  decrease in bounce rate
+                  <font color="#E38444">
+                    <em class="h5">
+                      Tech Stack: Spring Boot, Java, Junit, Redis, Cassandra,
+                      Gradle, Node.js, TypeScript, Postman, Jira
+                    </em>
+                  </font>
                 </li>
                 <li>
-                  • Defined and engineered a query in SAP HCM Query Manager
-                  tailored to retrieve the personnel administration data based
-                  on the client’s needs, reducing 100% of the manual data entry
-                  workload and enhancing the data accuracy
+                  • Researched and migrated existing mappers in a Spring Boot
+                  application to MapStruct, enhancing data mapping efficiency
+                  and achieving a 30% performance improvement
                 </li>
                 <li>
-                  • Implemented critical ChaRM enhancement requests as a
-                  functional lead for a Fortune 500 mining client, delivering
-                  promptly on multiple time-sensitive requests
+                  • Created and implemented comprehensive unit tests and
+                  integration tests using JUnit, achieving 90% code coverage,
+                  enhancing code quality, and increasing maintainability
+                </li>
+                <li>
+                  • Contributed to code reviews and collaborated with
+                  cross-functional teams in an Agile environment, engaging in
+                  grooming sessions and reducing code debt by 20% through
+                  technical debt tracking
                 </li>
               </ul>
             </div>
             <div>
               <h2 class="h3 experience-title">
-                Android Developer Intern,
-                <font color="#E38444">Ezyschooling</font>
+                Associate Software Engineer,
+                <font color="#E38444">Accenture</font>
               </h2>
-
               <ul class="section-text">
                 <li>
-                  • Collaborated effectively with a team of two to design and
-                  develop landing screens for the parenting section of the
-                  Android application, resulting in a 20% increase in user
-                  engagement
+                  <font color="#E38444">
+                    <em class="h5">
+                      Tech Stack: Spring Boot, Java, PostgreSQL, Swagger, Junit,
+                      SAP ERP, SAP HCM
+                    </em>
+                  </font>
                 </li>
                 <li>
-                  • Developed a face recognition and mask detection model with a
-                  96% accuracy rate in identifying masked faces within the
-                  attendance management application
+                  • Spearheaded the redesign of the backend services for a
+                  Fortune 500 mining client using Spring Boot, Java, and
+                  PostgreSQL, optimizing data processing and implementing
+                  RESTful APIs to achieve a 50% improvement in responsiveness
+                  and scalability for increased client requests
+                </li>
+                <li>
+                  • Resolved critical production issues in a time-sensitive
+                  environment, reducing bug reports by 40% and improving
+                  application stability
+                </li>
+                <li>
+                  • Defined and engineered a query in SAP HCM Query Manager
+                  tailored to retrieve the personnel administration data based
+                  on the client’s needs, eliminating manual data entry workload
+                  and enhancing data accuracy by 100%
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h2 class="h3 experience-title">
+                Software Development Intern,
+                <font color="#E38444">Ezyschooling</font>
+              </h2>
+              <ul class="section-text">
+                <li>
+                  <font color="#E38444">
+                    <em class="h5">
+                      Tech Stack: Android, Java, XML, Kotlin, SQLite, Gradle,
+                      Git, Retrofit, Python, TensorFlow, OpenCV
+                    </em>
+                  </font>
+                </li>
+                <li>
+                  • Collaborated with a team of two to design and develop
+                  landing screens for the Android application, leading to a 20%
+                  increase in user engagement and reducing bounce rate by 15%
+                  through enhanced user interface and experience
+                </li>
+                <li>
+                  • Optimized application performance by implementing
+                  RecyclerView and ingesting RESTful APIs using Retrofit,
+                  reducing app memory usage by 25% and significantly decreasing
+                  load times
+                </li>
+                <li>
+                  • Developed a face recognition and mask detection model using
+                  Python, TensorFlow, and OpenCV, achieving a 96% accuracy rate
+                  in identifying masked faces, which streamlined attendance
+                  management and improved operational efficiency
                 </li>
               </ul>
             </div>
@@ -850,9 +903,7 @@
                 <div class="wrapper">
                   <h3 class="h4 contact-item-title">Address:</h3>
 
-                  <address class="contact-info">
-                    Arlington, Texas 76010
-                  </address>
+                  <address class="contact-info">Arlington, Texas 76010</address>
                 </div>
               </li>
 
