--- a/index.html
+++ b/index.html
@@ -254,26 +254,26 @@
                 <li>
                   <font color="#E38444">
                     <em class="h5">
-                      Tech Stack: Spring Boot, Java, Junit, Redis, Cassandra,
+                      Tech Stack: Spring Boot, Java, TestNG, Redis, Cassandra,
                       Gradle, Node.js, TypeScript, Postman, Jira
                     </em>
                   </font>
                 </li>
                 <li>
-                  • Researched and migrated existing mappers in a Spring Boot
-                  application to MapStruct, enhancing data mapping efficiency
-                  and achieving a 30% performance improvement
+                  • Migrated an entire Spring Boot microservice mappers from
+                  Orika to MapStruct, enhancing data mapping efficiency and
+                  achieving 50% reduction in compile time of the application
                 </li>
                 <li>
                   • Created and implemented comprehensive unit tests and
-                  integration tests using JUnit, achieving 90% code coverage,
-                  enhancing code quality, and increasing maintainability
+                  integration tests using TestNG and Mockito, achieving 90% code
+                  coverage, enhancing code quality, and increasing
+                  maintainability
                 </li>
                 <li>
                   • Contributed to code reviews and collaborated with
-                  cross-functional teams in an Agile environment, engaging in
-                  grooming sessions and reducing code debt by 20% through
-                  technical debt tracking
+                  cross-functional teams in an Agile environment, reducing code
+                  debt by 20% through technical debt tracking
                 </li>
               </ul>
             </div>
